add initial files

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <!-- tailwind css -->
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-    <title>Document</title>
+    <title>🌙 Ramadan Kareem</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 
-   <h1 class="text-5xl font-bold title-font text-red-600 mt-4 text-center">Ramadan Kareem</h1>
+   <h1 class="text-5xl font-bold title-font text-red-600 mt-4 text-center">Ramadan Kareem 🌙</h1>
 
     <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto flex flex-col">
